--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "lint": "eslint --flag unstable_ts_config",
     "build": "yarn clean && yarn lint && tsup"
   },
+  "peerDependencies": {
+    "pino": "^8 || ^9"
+  },
   "devDependencies": {
     "@eslint/compat": "^1.2.3",
     "@eslint/js": "^9.15.0",
@@ -67,6 +70,7 @@
     "husky": "^9.1.7",
     "jiti": "^2.4.1",
     "lint-staged": "^15.2.10",
+    "pino": "^9.5.0",
     "pinst": "^3.0.0",
     "prettier": "^3.4.1",
     "tsup": "^8.3.5",
